change title info

--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "stylin-with-sass-class-project-files",
-  "version": "2.0.0",
-  "description": "practice folder for Stylin with Sass class",
+  "name": "flowong-website-portfolio",
+  "version": "1.0.0",
+  "description": "website portfolio folder for flowong.com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/theflowong/website-portfolio.git"
+  },
   "keywords": [
-    "sass",
-    "class"
+    "flo",
+    "wong"
   ],
-  "author": "tamouse@gmail.com",
+  "author": "florencewong1020@gmail.com",
   "license": "UNLICENSED",
   "devDependencies": {
     "browser-sync": "^2.17.5",
